--- a/app/views/admin/courses/_tinymce.html.erb
+++ b/app/views/admin/courses/_tinymce.html.erb
@@ -26,3 +26,29 @@ tinymce.init({
   }
 });
 </script>
+<script>
+tinymce.init({
+  selector: '#course_shortDescription',
+  plugins: "link image code paste media youtubeIframeAsync",
+  // TODO: to be added only if secure loading of plugin.js below is not working
+  // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
+  external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
+  // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
+  language: 'en',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,youtubeIframeAsync',
+  paste_data_images: true,
+  images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
+  // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
+  editorObject: {'id': 'course_description'},
+  video_template_callback: (data) => {
+    return '<audio controls controlslist="nodownload">' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
+  },
+  setup: function (editor) {
+    editor.on('blur', function (e) {
+      document.getElementById('question_question').value = editor.getContent();
+    });
+    // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
+    editor.settings.images_dataimg_filter = function () {return undefined;};
+  }
+});
+</script>
