--- a/app/views/application/_tinymce_yt_async_plugin.html.erb
+++ b/app/views/application/_tinymce_yt_async_plugin.html.erb
@@ -1,4 +1,13 @@
 <script>
+function extractVideoID(url){
+    var regExp = /^.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?]*).*/;
+    var match = url.match(regExp);
+    if ( match && match[7].length == 11 ){
+        return match[7];
+    }else{
+        alert("Could not extract video ID.");
+    }
+}
 tinymce.PluginManager.add('youtubeIframeAsync', function(editor) {
   // Add a button that opens a window
   editor.addButton('youtubeIframeAsync', {
@@ -12,9 +21,10 @@ tinymce.PluginManager.add('youtubeIframeAsync', function(editor) {
           {type: 'textbox', name: 'IframeURL', label: 'Iframe URL'}
         ],
         onsubmit: function(e) {
-          var youtubeVideoEmbedUrl = e.data.IframeURL.match(/(?:https?:\/{2})?(?:w{3}\.)?youtu(?:be)?\.(?:com|be)(?:\/watch\?v=|\/embed\/|\/)([^\s&]+)/)[1];
-          // Insert content when the window form is submitted
-          editor.insertContent('<div class="embed-responsive embed-responsive-16by9 youtube" data-embed="' + youtubeVideoEmbedUrl + '"><div class="play-button"></div></div>');
+        
+          var youtubeVideoEmbedUrl = e.data.IframeURL;
+          var videoId = extractVideoID(youtubeVideoEmbedUrl);
+          editor.insertContent('<div> <iframe style="min-height:400px;width:100%;" src="' + youtubeVideoEmbedUrl + '" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href="' + youtubeVideoEmbedUrl + '"><img src=https://img.youtube.com/vi/"'+videoId+'"/hqdefault.jpg ><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe> </div>')
         }
       });
     }
