changes to show error if multiple course invites don't work

--- a/app/views/course_invitations/multiple_courses.html.erb
+++ b/app/views/course_invitations/multiple_courses.html.erb
@@ -67,6 +67,8 @@
       }
     }).done (function (data) {
       alert("done");
+    }).fail (function (error){
+      alert("failed: " + error);
     });
   }
 
