--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -46,16 +46,20 @@ $('#update_button').on('click', function(e){
     return;
 
   var noteId = "<%= @note.id %>";
-  let url = window.location.origin + "/notes/update_content";
+  var lock_version = "<%=@lock_version%>";
+  let url = window.location.origin + "/notes/update_content.json";
   $.ajax({
     type: "POST",
     url: url,
     data: {
       "noteId": noteId,
-      "content": content
+      "content": content,
+      "lock_version": lock_version
     }
   }).done (function (data) {
     window.location.reload();
+  }).fail (function (error) {
+    alert("failed: " + JSON.stringify(error));
   });
 });
 </script>
