--- a/app/views/admin/course_details/_tinymce.html.erb
+++ b/app/views/admin/course_details/_tinymce.html.erb
@@ -1,5 +1,7 @@
 <%= render partial: "tinymce_ext_scripts" %>
 <%= render partial: "tinymce_yt_async_plugin" %>
+<script src="https://spaces.neetprep.com/assets/js/jsoneditor.js"></script>
+<link rel="stylesheet" href="https://spaces.neetprep.com/assets/css/jsoneditor.css">
 <script>
 tinymce.init({
   selector: '#course_detail_description',
