--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -17,6 +17,7 @@
 <%= render partial: "tinymce_ext_scripts" %>
 <%= render partial: "tinymce_yt_async_plugin" %>
 <%= render partial: "tinymce_que_plugin" %>
+<%= render partial: "mathjax" %>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.533.0.min.js"></script>
 <script>
 let cssLink = document.getElementById('note_content').value.split('rel="stylesheet" type="text/css"/>')[0];
