fix for previous audio preload and no download change

--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -34,7 +34,7 @@ tinymce.init({
   language: 'en',
   toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,template,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,questionIframe,|,youtubeIframeAsync,|,ncertBlueBox',
   paste_data_images: true,
-  extended_valid_elements : 'a[id|class|style|width|height|onclick|href],div[id|class|style|width|height|onclick|data-url],script[src|async|defer|type|charset]',
+  extended_valid_elements : 'a[id|class|style|width|height|onclick|href],div[id|class|style|width|height|onclick|data-url],script[src|async|defer|type|charset],audio[controlslist|controls|preload]',
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   editorObject: {'id': 'note_content'},
   templates: [
