--- a/app/views/admin/question_translations/_mathjax.html.erb
+++ b/app/views/admin/question_translations/_mathjax.html.erb
@@ -1,1 +1,10 @@
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script>
+window.addEventListener('load', function () {
+  MathJax.Hub.Config({
+    CommonHTML: {
+      mtextFontInherit: true
+    }
+  });
+});
+</script>
