--- a/app/views/coaches/show.html.slim
+++ b/app/views/coaches/show.html.slim
@@ -22,12 +22,18 @@ link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/
     p #{@video_data_count} video(s) watched
     table.table
       thread
+        th scope="col" Subject
+        th scope="col" Topic
         th scope="col" Video Name
+        th scope="col" Duration (sec)
         th scope="col" Date
       tbody
         - @video_data.each do |data|
           tr
+            td = data[:subject]
+            td = data[:topic]
             td = data[:video_name]
+            td = data[:pos]
             td = data[:on_day].strftime("%a, %d/%m/%y")
   
   .test-stats.mt-2
@@ -54,12 +60,16 @@ link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/
     table.table
       thread
         th scope="col" Index
+        th scope="col" Subject
+        th scope="col" Topic
         th scope="col" Date
         th scope="col" Correct
       tbody
         - @question_data.each_with_index do |data, index|
           tr
             td = index+1
+            td = data[:subject]
+            td = data[:topic]
             td = data[:on_day].strftime("%a, %d/%m/%y")
             - correct = 'Yes' if data[:correct_option] == data[:user_answer]
             td =  correct || 'No'
