--- a/app/views/coaches/show.html.slim
+++ b/app/views/coaches/show.html.slim
@@ -16,6 +16,7 @@ link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/
       label for="end" Choose end date
       input#end type="date" value="#{@end}"
     button.btn.btn-primary type="submit" Get
+  a.mt-2.btn.btn-primary.text-white href="#{"/coach-dashboard-summary?studentId=" + @student_id.to_s + "&start=" + @start + "&end=" + @end}" Get Summary
   
   .video-stats.mt-2
     h3 Video Data
@@ -30,8 +31,8 @@ link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/
       tbody
         - @video_data.each do |data|
           tr
-            td = data[:subject]
-            td = data[:topic]
+            td = data[:subject_name]
+            td = data[:topic_name]
             td = data[:video_name]
             td = data[:pos]
             td = data[:on_day].strftime("%a, %d/%m/%y")
@@ -68,8 +69,8 @@ link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/
         - @question_data.each_with_index do |data, index|
           tr
             td = index+1
-            td = data[:subject]
-            td = data[:topic]
+            td = data[:subject_name]
+            td = data[:topic_name]
             td = data[:on_day].strftime("%a, %d/%m/%y")
             - correct = 'Yes' if data[:correct_option] == data[:user_answer]
             td =  correct || 'No'
