--- a/app/views/admin/tests/leader_board.html.slim
+++ b/app/views/admin/tests/leader_board.html.slim
@@ -1,7 +1,7 @@
 .container
   form method='get' action=""
     label for="last_date" Select End Date
-    input type="datetime-local" id="last_date" name="last_date" value="#{@date_time}"
+    input type="datetime-local" id="last_date" name="last_date" value="#{@display_date_time}"
     input type="submit"
 
   div style="margin-top: 32px;"
