*achievers batch added

--- a/app/views/admin/tests/leader_board.html.slim
+++ b/app/views/admin/tests/leader_board.html.slim
@@ -14,6 +14,7 @@
         th Email
         th Phone
         th Finished At
+        th Duration
         th Score
       - @paid_attempts.each do |attempt|
         tr
@@ -22,6 +23,7 @@
           td = attempt.user.email || attempt.user.user_profile.email
           td = attempt.user.phone || attempt.user.user_profile.phone
           td = attempt&.finishedAt&.strftime("%d-%m-%Y %H:%M")
+          td = raw(((attempt.updatedAt - attempt.createdAt) / 60).round.to_s + " minutes") if attempt.createdAt.present? and attempt.updatedAt.present?
           td = attempt.result["totalMarks"]
 
   div style="margin-top: 32px;"
@@ -34,6 +36,7 @@
         th Email
         th Phone
         th Finished At
+        th Duration
         th Score
       - @inspire_attempts.each do |attempt|
         tr
@@ -42,6 +45,29 @@
           td = attempt.user.email || attempt.user.user_profile.email
           td = attempt.user.phone || attempt.user.user_profile.phone
           td = attempt&.finishedAt&.strftime("%d-%m-%Y %H:%M")
+          td = raw(((attempt.updatedAt - attempt.createdAt) / 60).round.to_s + " minutes") if attempt.createdAt.present? and attempt.updatedAt.present?
+          td = attempt.result["totalMarks"]
+
+  div style="margin-top: 32px;"
+    h3 Achiever Batch Students
+    div style="margin-top: 32px;"
+      button onclick='exportTableToCSV("#{@test_id + '-achiever-leaderboard.csv'}", "table.achiever tr")' Download Achiever CSV
+    table.achiever style="margin-top: 32px;"
+      tr
+        th User
+        th Email
+        th Phone
+        th Finished At
+        th Duration
+        th Score
+      - @achiever_attempts.each do |attempt|
+        tr
+          td
+            a target="_blank" href="#{"/admin/users/" + attempt.user.id.to_s}" = attempt.user.name
+          td = attempt.user.email || attempt.user.user_profile.email
+          td = attempt.user.phone || attempt.user.user_profile.phone
+          td = attempt&.finishedAt&.strftime("%d-%m-%Y %H:%M")
+          td = raw(((attempt.updatedAt - attempt.createdAt) / 60).round.to_s + " minutes") if attempt.createdAt.present? and attempt.updatedAt.present?
           td = attempt.result["totalMarks"]
 javascript:
   function exportTableToCSV(filename, class_name) {
